--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,12 @@ go:
   - 1.11.x
   - 1.12.x
   - master
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
