--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ after_success:
 addons:
   sonarcloud:
     organization: "steffenfritz"
-    token:
-      secure: "849f4ab429e212b35e1e729e2e7babc8b7910436" # encrypted value of your token
+    token: "849f4ab429e212b35e1e729e2e7babc8b7910436" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
